--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ mến chúc tới toàn thể Lãnh đạo, Cán bộ, Công nhân viên bước
 <p><font face="Times New Roman" size="4">Một lần nữa gửi tới các bạn cùng gia đình lời chúc SỨC KHỎE – HẠNH PHÚC – AN KHANG – THỊNH VƯỢNG.
 </font><br /></p>
 <p><font face="Times New Roman" size="4">Trân trọng!</font><br /></p>
-<p><font face="Times New Roman" size="4">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Bình Dương, ngày 31 tháng 12 năm 2022</font></p>
-<p><font face="Times New Roman" size="4">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Huỳnh Minh Triết</font></p>
+<p><font face="Times New Roman" size="4">Bình Dương, ngày 31 tháng 12 năm 2022</font></p>
+<p><font face="Times New Roman" size="4">&emsp;&emsp;&emsp;&emsp;Huỳnh Minh Triết</font></p>
 <p class="scroll-notice"></p>
 
 
