--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
 <!-- partial:index.partial.html -->
 <!-- YOUR CUSTOM MARKUP -->
-
+  <audio id="audio" controls autoplay hidden loop>
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
 <h1><style="text-align:center;"><script type="text/javascript">
     <!-- Begin
     function toSpans(span) {
@@ -77,25 +79,36 @@
     var myRainbowSpan=new RainbowSpan(r1, 0, 360, 255, 50, 18); //apply static rainbow effect
     myRainbowSpan.timer=window.setInterval("myRainbowSpan.moveRainbow()", myRainbowSpan.speed);
     </script></h1>
+<p>&emsp;</p>
+<p>&emsp;</p>
+<div class="css-typing">
+  <p>
+    Mến gửi đại gia đình TDA!
+  </p>
+  <p>
+	Năm cũ sắp qua, năm mới đang đến gần, trong thời khắc thiêng liêng 
+	những ngày <br/> cuối năm, kính chúc tới toàn thể Lãnh đạo, Cán bộ,
+	Công nhân viên trong cty bước <br/>sang một năm mới với nhiều thành công và hạnh phúc.
+	Chúc công ty ngày một <br/>gắn kết và phát triển vững mạnh, gặt hái nhiều
+	thắng lợi.<br/>
+  </p>
+  <p>
+    Một lần nữa xin chúc mọi người cùng gia đình đón Tết sum vầy, có nhiều<br/>
+	SỨC KHỎE – HẠNH PHÚC – BÌNH AN – THỊNH VƯỢNG.
+  </p>
+ <p>
+	Bình Dương, ngày 31 tháng 12 năm 2022 <br/>
+	&emsp;<br/>
+    &emsp;&emsp;&emsp;&emsp; Huỳnh Minh Triết
+  </p>
+  
+</div>
 
-
-
-
-
-
-<p> *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*</p>
 <p> &emsp;</p>
 
-<p><font face="Times New Roman" size="5">Kính gửi đại gia đình TDA!</font><br /></p>
-<p><font face="Times New Roman" size="4">Năm cũ sắp qua, năm mới đang đến gần, trong giây phút thiêng liêng những ngày cuối năm, 
-mến chúc tới toàn thể Lãnh đạo, Cán bộ, Công nhân viên bước sang một năm mới với nhiều thành công và hạnh phúc. Chúc công ty ngày một gắn kết và phát triển vững mạnh, gặt hái nhiều thắng lợi. </font><br /></p>
-<p><font face="Times New Roman" size="4">Một lần nữa gửi tới các bạn cùng gia đình lời chúc SỨC KHỎE – HẠNH PHÚC – AN KHANG – THỊNH VƯỢNG.
-</font><br /></p>
-<p><font face="Times New Roman" size="4">Trân trọng!</font><br /></p>
-<p><font face="Times New Roman" size="4">Bình Dương, ngày 31 tháng 12 năm 2022</font></p>
-<p><font face="Times New Roman" size="4">&emsp;&emsp;&emsp;&emsp;Huỳnh Minh Triết</font></p>
-<p class="scroll-notice"></p>
 
+<p class="scroll-notice"></p>
+<p class="scroll-notice"></p>
 
 <!-- FIREWORK APP MARKUP -->
 <div class="fireworks-container">
